--- a/.env
+++ b/.env
@@ -16,5 +16,14 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=3c52f4210aa6c577ed6f9f801ee7413f
+APP_SECRET=ee6845f6f06091950609f71e16826364
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="postgresql://postgres:passwd@aaxistest-php81-symfony54-postgres:5432/postgres_symfony?serverVersion=14&charset=utf8"
+###< doctrine/doctrine-bundle ###
